terraform-best-practices/aws/s3/terraform/enable-s3-server-access-logging/test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../enable-server-access-logging.yaml --payload ./good-payload.json --output json
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: enable-s3-server-access-logging
                rules:
                - rule:
                    name: enable-s3-server-access-logging
                  error: ~
                  violations: ~
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../enable-server-access-logging.yaml --payload ./bad-payload.json --output json
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: enable-s3-server-access-logging
                rules:
                - rule:
                    name: enable-s3-server-access-logging
                  error: ~
                  violations:
                  - message: Use the aws_s3_bucket_logging resource to enable server access logging
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: 'Expected value: true'
